# pure_railguard

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  premake5.lua
.github/workflows/: tests.yml
include/railguard/core/: engine.h  renderer.h  window.h
include/railguard/rendering/: Window.h  renderer.h
include/railguard/rendering/device/: RenderDevice.h  RenderDeviceVulkan.h
include/railguard/utils/: Strings.h  arrays.h  event_sender.h  io.h  maps.h  math.h  memory.h  storage.h  string.h
resources/shaders/: gbuffer.vert  test.frag
src/: main.c  main.cpp
src/core/: engine.c
src/core/renderer/: renderer_vulkan.c
src/core/window/: window_sdl2.c
src/rendering/: Window.cpp
src/rendering/device/: RenderDeviceVulkan.cpp  renderer_vulkan.c
src/rendering/window/: window_sdl2.c
src/utils/: Strings.cpp  arrays.c  event_sender.c  io.c  maps.c  math.c  memory.c  storage.c  string.c
tests/: README.md  main.c
tests/core/: renderer.h  test_renderer.h  test_window.h
tests/framework/: test_framework.c  test_framework.h
tests/utils/: math.h  test_event_sender.h  test_hash_map.c  test_hash_map.h  test_io.h  test_storage.h  test_string.h  test_struct_map.h  test_vector.h
